fix for MYJYSK v2.20 - Making truncated texts in Calendar not truncated

--- a/thinktime-fix.css
+++ b/thinktime-fix.css
@@ -19,6 +19,10 @@ MAIN FOCUS
 
 LATEST FIXES
 
+06.03.2025
+----------
+fix for MYJYSK v2.20 - Making truncated texts in Calendar not truncated
+
 05.03.2025
 ----------
 File size in News article in Edit mode - Slightly moved to make "Download" visible
@@ -2586,7 +2590,7 @@ div.labelCustomField.ng-binding {
 }
 
 /* MYJYSK v2.20 - Making truncated texts in Calendar not truncated */
-[class^="truncated-text-with-tooltip-module__content--"] {
+[class^="event-module__event--"] [class^="truncated-text-with-tooltip-module__content--"] {
     text-wrap: balance;
 }
 
